--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
+.App{
+  margin: 20px 200px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.popular-movies{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+grid-gap: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+img{
+  width: 100%;
+  height: 30vh;
+  object-fit: cover;
+  border-radius: 1rem;
+  margin-bottom: 1rem;
+} 
+
+h2{
+  font-size: 0.8rem;
+  height: 30px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.filter-container button {
+  margin-right: 2rem;
+  min-width: 5rem;
+  padding: 0.5rem 1rem;
+
+  background: #fff;
+  color: rgb(65, 98, 198);
+  border-radius: 1rem;
+border: 2px solid rgb(28, 36, 53);
+font-weight: bold;
+cursor: pointer;
+}
+
+button.active{
+  background:rgb(65, 98, 198) ;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
